# MEA-NAP

./: .gitignore  .gitmodules  .readthedocs.yaml  AdvancedSettings.m  AnalysisPipelineApp.mlapp  LICENSE  MEANAP-Params-Axion64MEA-startStep2.mat  MEANAP-Params-Axion64MEA.mat  MEANAPApp.mlapp  MEANAPviewer.mlapp  MEApipeline.asv  MEApipeline.m  MEApipelineV6.m  MEApipeline_timingBenchmark.m  MEApipeline_timingBenchmark_debug.m  README.md  biAdvancedSettings.m  downloadExampleData.m  files_genotypes_pipeline_format_all_DIVs_2020.csv  getParamsFromApp.m  mecp2RecordingsList.csv  mecp2RecordingsList.xlsx  pipelineReadCSV.m  pyproject.toml  runMEANAPviewer.m  runPipelineApp.m  runStimDetectionApp.m  setAppParams.m  speedUpCircularPlot.m  stimDetectionApp.mlapp  version.txt
Functions/: BurstDetectISIn.m  CreateOutputFolders.m  ExtractNetMet.m  ExtractNetMetOrganoid.asv  ExtractNetMetOrganoid.m  GroupingInfo.m  HalfViolinPlot.m  NMFcalculationExample.m  NodeCartography.m  PlotEphysStats.m  PlotIndvNetMet.m  PlotNetMet.m  PlotNetMet.m~  PlotNetMetOrganoid.m  SpikeTimesToMatrix.m  StandardisedNetworkPlot.m  StandardisedNetworkPlotNodeCartography.m  StandardisedNetworkPlotNodeColourMap.m  StandardisedNetworkPlotNodeColourMap2.m  TrialLandscapeDensity.m  aesthetics.m  batchProcessSpikesFromStim.m  burstDetect.m  calEffRank.m  calNMF.m  calNodeCartography.m  checkIfAnySpikes.m  checkOneFigureHandle.m  combineAllChannelSpikeTimes.m  combineExpNetworkData.m  combinePlots.m  compileAllExpData.m  convertMCSh5toMat.m  doClassification.m  doLDA.m  doStats.m  downSampleSum.m  fLOESS.m  (+52 more)
(+527 files in other folders)
